[project]
name = "calendar-queue"
dynamic = ["version"]
description = "A pure python calendar-queue based on asyncio"
authors = [
    {name = "Claudio Usai"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = "--cov=calendar_queue --cov-report xml:coverage.xml --cov-report term --timeout=60"

[tool.pylint.format]
max-line-length = "88"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/calendar_queue/__init__.py"

[tool.pdm.dev-dependencies]
test = [
    "pytest~=8.1",
    "time-machine~=2.16",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.2",
    "pytest-timeout>=2.4",
]
docs = [
    "mkdocs~=1.6",
    "mkdocstrings[python]~=0.29",
]
formatter = [
    "black~=25.1",
]
typesafety = [
    "mypy~=1.16",
]
linting = [
    "pylint~=3.3",
]
